resolved-feedback-issues

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -4758,3 +4758,11 @@ en:
   giftvouchers.create.tabs.preview: 'Preview'
   giftvouchers.create.label.voucherrelation: 'Family'
   giftvouchers.create.label.voucherrelation.para: 'Redeem all services'
+  giftvouchers.create.label.allservice: 'All Services'
+  giftvouchers.create.label.countedservices: 'services'
+  giftvouchers.create.label.selectservices: 'Select Services'
+  giftvouchers.create.label.searchservices: 'Search Services'
+  giftvouchers.create.label.save: 'Save'
+  giftvouchers.create.label.booknow: 'Book Now'
+  giftvouchers.create.label.sold: 'Sold'
+  giftvouchers.create.label.selectall: 'Select All'
