resolved-pr-comments

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -4878,19 +4878,20 @@ en:
   giftvouchers.create.label.bgcolors: 'Background Colors'
   giftvouchers.create.label.none: 'None'
   giftvouchers.create.label.nextstep: 'Next Step'
+  giftvouchers.create.label.prevstep: 'Previous Step'
   giftvouchers.create.label.create: 'Create'
   giftvouchers.create.tabs.builder: 'Builder'
   giftvouchers.create.tabs.preview: 'Preview'
   giftvouchers.create.label.voucherrelation: 'Family'
   giftvouchers.create.label.voucherrelation.para: 'Redeem all services'
-  giftvouchers.create.label.allservice: 'All Services'
-  giftvouchers.create.label.countedservices: 'services'
-  giftvouchers.create.label.selectservices: 'Select Services'
-  giftvouchers.create.label.searchservices: 'Search Services'
-  giftvouchers.create.label.save: 'Save'
   giftvouchers.create.label.booknow: 'Book Now'
   giftvouchers.create.label.sold: 'Sold'
-  giftvouchers.create.label.selectall: 'Select All'
+  giftvouchers.create.label.terms: 'Terms and Conditions'
+  selectservices.label.allservice: 'All Services'
+  selectservices.label.countedservices: 'services'
+  selectservices.label.selectservices: 'Select Services'
+  selectservices.label.searchservices: 'Search Services'
+  selectservices.label.selectall: 'Select All'
   ui.clientcard-labtests.options.viewreport: 'View Report'
   ui.clientcard-labtests.options.print: 'Print'
   ui.clientcard-labtests.options.share: 'Share'
