changed the row data color for today and overdue column, fixed select period bugs,changed column name

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -54,10 +54,7 @@ en:
   activityList.column.clientName: 'Client name'
   activityList.column.email: 'Email'
   activityList.column.phone: 'Phone'
-  activityList.column.leadFirstName: 'Lead first name'
-  activityList.column.firstName: 'First name'
-  activityList.column.leadLastName: 'Lead last name'
-  activityList.column.lastName: 'Last name'
+  activityList.column.leadName: 'Lead name'
   activityList.column.leadEmail: 'Lead email'
   activityList.column.leadPhone: 'Lead phone'
   activityList.column.leadCreatedDate: 'Lead created date'
