--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -81,6 +81,7 @@ en:
   activityList.column.leadLostTime: 'Lead lost time'
   activityList.column.leadSource: 'Lead source'
   activityList.column.wonBy: 'Won by'
+  activityList.column.leadStage: 'Lead Stage'
   activityList.column.done: 'Done'
   activityList.column.date.editName: 'date'
   activityList.column.subject.editName: 'subject'
