Added new column for the contact and changed the no activity text and icon

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -48,6 +48,7 @@ en:
   activityList.search.placeholder: 'Search'
   activityList.createActivity: 'Create Activity'
   activityList.empty.activity.label: 'No Activities'
+  activityList.empty.activity.label.description: 'Try resetting you filters or create new activity'
   activityList.column.dueDate: 'Due Date'
   activityList.column.subject: 'Subject'
   activityList.column.client: 'Client'
@@ -81,7 +82,8 @@ en:
   activityList.column.leadLostTime: 'Lead lost time'
   activityList.column.leadSource: 'Lead source'
   activityList.column.wonBy: 'Won by'
-  activityList.column.leadStage: 'Lead Stage'
+  activityList.column.leadStage: 'Lead stage'
+  activityList.column.leadDescription: 'Lead description'
   activityList.column.done: 'Done'
   activityList.column.date.editName: 'date'
   activityList.column.subject.editName: 'subject'
@@ -119,6 +121,14 @@ en:
   activityList.column.clientCity: 'Client city'
   activityList.column.clientPostcode: 'Client postcode'
   activityList.column.clientTotalActivities: 'Client total activities'
+  activityList.column.clientMobile: 'Client mobile'
+  activityList.column.clientCreatedAt: 'Client created date'
+  activityList.column.clientSource: 'Client source'
+  activityList.column.clientSalutation: 'Client salutation'
+  activityList.column.clientGender: 'Client gender'
+  activityList.column.clientID: 'Client ID'
+  activityList.column.clientDOB: 'Client DOB'
+  activityList.column.clientStatus: 'Client status'
   activityList.addColumn.searchColumn: 'Search here'
   activityList.addColumn.visibleColumn: 'Visible'
   activityList.addColumn.activity: 'Activity'
