--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -69,7 +69,6 @@ en:
   activityList.column.creator: 'Creator'
   activityList.column.addTime: 'Add time'
   activityList.column.duration: 'Duration'
-  activityList.column.lead: 'Lead'
   activityList.column.owner: 'Owner'
   activityList.column.leadOwner: 'Lead owner'
   activityList.column.leadDoneActivities: 'Lead done activities'
@@ -88,7 +87,7 @@ en:
   activityList.column.date.editName: 'date'
   activityList.column.subject.editName: 'subject'
   activityList.column.client.editName: 'client'
-  activityList.column.lead.editName: 'lead'
+  activityList.column.leadDescription.editName: 'lead description'
   activityList.column.email.editName: 'email'
   activityList.column.phone.editName: 'phone'
   activityList.column.leadFirstName.editName: 'lead first name'
@@ -110,16 +109,20 @@ en:
   activityList.column.clientStreet.editName: 'client street'
   activityList.column.clientCity.editName: 'client city'
   activityList.column.clientPostCode.editName: 'client postcode'
+  activityList.column.clientCountry.editName: 'client country'
   activityList.column.email.required: 'Email is required!'
+  activityList.column.edit.tooltip: 'Edit'
   activityList.column.email.validate: 'Enter valid email'
   activityList.column.addColumns: 'Add Columns'
   activityList.column.assignedToUser: 'Assigned to user'
   activityList.column.label: 'Label'
   activityList.column.clientEmail: 'Client email'
   activityList.column.clientPhone: 'Client phone'
+  activityList.column.address.details: 'Address Details'
   activityList.column.clientStreet: 'Client street'
   activityList.column.clientCity: 'Client city'
   activityList.column.clientPostcode: 'Client postcode'
+  activityList.column.clientCountry: 'Client country'
   activityList.column.clientTotalActivities: 'Client total activities'
   activityList.column.clientMobile: 'Client mobile'
   activityList.column.clientCreatedAt: 'Client created date'
