created the document viewer page

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5121,3 +5121,10 @@ en:
   galley.list.image.show: 'Show'
   galley.list.menu.new.album: 'New Album'
   galley.list.menu.Owner.album: 'Owner'
+  test.document.viewer.title: 'Document Viewer'
+  test.document.viewer.input.documentid: 'Document Id'
+  test.document.viewer.show.document: 'Show Document'
+  ui.epaper.page: 'Page'
+  ui.epaper.prevpage: 'Prev Page'
+  ui.epaper.nextpage: 'Next Page'
+  ui.epaper.null.errormessage: 'This document id does not exist, Please use other document id'
