Added translation key and validation

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5122,3 +5122,90 @@ en:
   galley.list.image.show: 'Show'
   galley.list.menu.new.album: 'New Album'
   galley.list.menu.Owner.album: 'Owner'
+  activity.filter.popover.label: 'Select a person'
+  activity.filter.popover.title: 'Filter'
+  activity.filter.popover.search.input.placeholder: 'Search owner or filter'
+  activity.filter.popover.owner.tab.label: 'Owners'
+  activity.filter.popover.filter.tab.label: 'Filters'
+  activity.filter.popover.owner.everyone.label: 'Everyone'
+  activity.filter.popover.add.new.filter.label: 'Add new filter'
+  activity.filter.popover.user.you.label: '(You)'
+  create.filter.modal.title: 'Create Filter'
+  create.filter.modal.all.condition.title: 'Show activities that match ALL of these conditions:'
+  create.filer.modal.add.condition.btn: 'Add Condition'
+  create.filter.modal.any.condition.title: 'And match ANY of these conditions:'
+  create.filter.modal.visibility.private: 'Private'
+  create.filter.modal.visibility.shared: 'Shared'
+  create.filter.modal.save.filter.checkbox.label: 'Save selected columns with the filter'
+  create.filter.modal.filter.name.label: 'Filter Name'
+  create.filter.modal.filter.name.placeholder: 'Enter Filter Name'
+  create.filter.modal.visibility.label: 'Visibility'
+  create.filter.modal.delete.button.label: 'Delete'
+  create.filter.modal.preview.button.label: 'Preview'
+  create.filter.modal.save.button.label: 'Save'
+  create.filter.modal.free.label: 'Free'
+  create.filter.modal.busy.label: 'Busy'
+  create.filter.modal.toDo.label: 'To do'
+  create.filter.modal.done.label: 'Done'
+  create.filter.modal.private.visibility.label: 'Private'
+  create.filter.modal.private.visibility.desc: 'Only the creator can see this filter'
+  create.filter.modal.shared.visibility.label: 'Shared'
+  create.filter.modal.shared.visibility.desc: 'All users in the company can see and use this filter'
+  create.filter.modal.status.pending: 'Pending'
+  create.filter.modal.status.workingOn: 'Working on'
+  create.filter.modal.status.reopened: 'Reopened'
+  create.filter.modal.status.done: 'Done'
+  create.filter.modal.status.awaiting: 'Awaiting'
+  create.filter.modal.activity.option.label: 'Activity'
+  create.filter.modal.activity.column.add.time: 'Add time'
+  create.filter.modal.activity.column.assigned.user: 'Assigned to user'
+  create.filter.modal.activity.column.client: 'Client'
+  create.filter.modal.activity.column.creator: 'Creator'
+  create.filter.modal.activity.column.lead: 'Lead'
+  create.filter.modal.activity.column.done: 'Done'
+  create.filter.modal.activity.column.type: 'Type'
+  create.filter.modal.activity.column.subject: 'Subject'
+  create.filter.modal.activity.column.dueDate: 'Due Date'
+  create.filter.modal.activity.column.free.busy: 'Free/busy'
+  create.filter.modal.activity.column.status: 'Status'
+  create.filter.modal.date.is.operand: 'is'
+  create.filter.modal.date.is.not.operand: 'is not'
+  create.filter.modal.date.is.later.than.operand: 'is later than'
+  create.filter.modal.date.is.earlier.than.operand: 'is earlier than'
+  create.filter.modal.date.is.exactly.or.later.operand: 'is exactly or later than'
+  create.filter.modal.date.is.exactly.or.earlier.operand: 'is exactly or earlier than'
+  create.filter.modal.date.is.empty.operand: 'is empty'
+  create.filter.modal.date.is.not.empty.operand: 'is not empty'
+  create.filter.modal.date.belongs.to.team.operand: 'belongs to team'
+  create.filter.modal.date.contains.operand: 'contains'
+  create.filter.modal.date.does.not.contain.operand: 'does not contain'
+  create.filter.modal.date.start.with.operand: 'start with'
+  create.filter.modal.date.does.not.start.with.operand: 'does not start with'
+  create.filter.modal.date.end.with.operand: 'ends with'
+  create.filter.modal.date.does.not.end.with.operand: 'does not end with'
+  create.filter.modal.date.menu.relative.group.name: 'Relative date intervals'
+  create.filter.modal.date.menu.relative.option.last.quarter: 'last quarter'
+  create.filter.modal.date.menu.relative.option.this.quarter: 'this quarter'
+  create.filter.modal.date.menu.relative.option.last.month: 'last month'
+  create.filter.modal.date.menu.relative.option.this.month: 'this month'
+  create.filter.modal.date.menu.relative.option.last.week: 'last week'
+  create.filter.modal.date.menu.relative.option.this.week: 'this week'
+  create.filter.modal.date.menu.relative.option.next.week: 'next week'
+  create.filter.modal.date.menu.relative.option.next.month: 'next month'
+  create.filter.modal.date.menu.relative.date.group.name: 'Relative dates'
+  create.filter.modal.date.menu.relative.date.option.month: '{{count}} months ago'
+  create.filter.modal.date.menu.relative.date.option.week: '{{count}} weeks ago'
+  create.filter.modal.date.menu.relative.date.option.in.week: 'in {{count}} week'
+  create.filter.modal.date.menu.relative.date.option.in.weeks: 'in {{count}} weeks'
+  create.filter.modal.date.menu.relative.date.option.in.month: 'in {{count}} month'
+  create.filter.modal.date.menu.relative.date.option.in.months: 'in {{count}} months'
+  create.filter.modal.date.menu.relative.date.option.yerterday: 'yesterday'
+  create.filter.modal.date.menu.relative.date.option.before.today: 'before today'
+  create.filter.modal.date.menu.relative.date.option.today: 'today'
+  create.filter.modal.date.menu.relative.date.option.now: 'now'
+  create.filter.modal.date.menu.relative.date.option.today.later: 'today or later'
+  create.filter.modal.date.menu.relative.date.option.before.tomorrow: 'before tomorrow'
+  create.filter.modal.date.menu.relative.date.option.tomorrow: 'tomorrow'
+  create.filter.modal.date.menu.relative.date.option.tomorrow.later: 'tomorrow or later'
+  create.filter.modal.filter.name.required: 'Filter name is required'
+  create.filter.modal.filter.name.max.validation.message: 'Name should be 50 character maximum'
