--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5152,3 +5152,23 @@ en:
   galley.list.image.show: 'Show'
   galley.list.menu.new.album: 'New Album'
   galley.list.menu.Owner.album: 'Owner'
+  setup.email.inbox.tab.item.inbox : 'Inbox'
+  setup.email.inbox.tab.item.draft : 'Draft'
+  setup.email.inbox.tab.item.sent : 'Sent'
+  setup.email.inbox.tab.item.archive : 'Archive'
+  setup.email.inbox.more.menu.settings : 'Go to mail settings'
+  setup.email.inbox.more.menu.automations : 'Automations (2)'
+  setup.email.inbox.private.menu.share.title : 'Share this within your company'
+  setup.email.inbox.private.menu.private.title : 'Keep conversation private'
+  setup.email.inbox.private.menu.share.description : "This email conversation will be visiable to others only when it`s linked to clients ans leads in Pabau"
+  setup.email.inbox.private.menu.private.description : 'You will not be able to share any records with this 3rd party.'
+  setup.email.inbox.notification.delete.mail : 'Email has been deleted successfully'
+  setup.email.inbox.notification.mark.as.read : 'Email has been updated as mark as read'
+  setup.email.inbox.notification.move.archive : 'Email has been move into archive'
+  setup.email.inbox.no.mail.text : 'No mail found'
+  setup.email.inbox.filter.menu.unread : 'Unread'
+  setup.email.inbox.filter.menu.linked.lead : 'Linked with lead'
+  setup.email.inbox.filter.menu.linked.open.lead : 'Linked with an open lead'
+  setup.email.inbox.filter.menu.not.linked.lead : 'Not Linked with a lead'
+  setup.email.inbox.mark.menu.read : 'Mark as read'
+  setup.email.inbox.mark.menu.unread : 'Mark as unread'
