Advanced activity filter

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5131,6 +5131,7 @@ en:
   activity.filter.popover.add.new.filter.label: 'Add new filter'
   activity.filter.popover.user.you.label: '(You)'
   create.filter.modal.title: 'Create Filter'
+  edit.activity.filter.modal.title: 'Edit Filter “{{name}}”'
   create.filter.modal.all.condition.title: 'Show activities that match ALL of these conditions:'
   create.filer.modal.add.condition.btn: 'Add Condition'
   create.filter.modal.any.condition.title: 'And match ANY of these conditions:'
@@ -5209,3 +5210,15 @@ en:
   create.filter.modal.date.menu.relative.date.option.tomorrow.later: 'tomorrow or later'
   create.filter.modal.filter.name.required: 'Filter name is required'
   create.filter.modal.filter.name.max.validation.message: 'Name should be 50 character maximum'
+  create.filter.modal.search.result.match.label: '{{count}} MATCHES'
+  create.filter.modal.no.search.label: 'No match found'
+  create.filter.modal.no.search.desc: 'Please check your spelling'
+  create.filter.modal.shared.filter.tooltip: "You're viewer of this filter. Only the owner {{name}} can make changes here." 
+  create.filter.modal.creator.name: 'Creator: {{name}}'
+  create.filter.modal.last.modified.label: 'Last modified: {{date}}'
+  create.filter.modal.deleted.filter.message: 'You have successfully deleted a filter'
+  create.filter.modal.deleted.filter.error.message: 'While deleting a filter'
+  create.filter.modal.create.filter.message: 'You have successfully created a filter'
+  create.filter.modal.create.filter.error.message: 'While creating a filter'
+  create.filter.modal.edit.filter.message: 'You have successfully edited a filter'
+  create.filter.modal.edit.filter.error.message: 'While editing a filter'
