--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -2436,8 +2436,8 @@ en:
   ui.medicalformbuilder.advanced.basic.formtitle.show: 'Show'
   ui.medicalformbuilder.advanced.basic.formtitle.hide: 'Hide'
   ui.medicalformbuilder.advanced.basic.heading: 'Headings'
-  ui.medicalformbuilder.advanced.basic.heading.separate: 'Use to separate'
-  ui.medicalformbuilder.advanced.basic.heading.section: 'Use to create section'
+  ui.medicalformbuilder.advanced.basic.heading.default.heading: 'Heading by default'
+  ui.medicalformbuilder.advanced.basic.heading.default.section: 'Section by default'
   ui.medicalformbuilder.advanced.basic.submit: 'Submit Button Label'
   ui.medicalformbuilder.advanced.basic.submit.placeholder: 'Submit Button Label'
   ui.medicalformbuilder.advanced.basic.sharelink: 'Share a copy of the form with the client in Pabau Connect'
@@ -2451,15 +2451,6 @@ en:
   ui.medicalformbuilder.advanced.acknowledgement.showlink: 'Show link to Pabau connect where client can manage their appointment'
   ui.medicalformbuilder.advanced.acknowledgement.addsocial: 'Add Google Analytics or Facebook Pixel tracking code'
   ui.medicalformbuilder.advanced.acknowledgement.redirecttype: 'Choose where you want to redirect clients on form submission'
-  ui.medicalformbuilder.advanced.payment.title: 'Payment Processing'
-  ui.medicalformbuilder.advanced.payment.description: 'Take a payment when the client submits the form.'
-  ui.medicalformbuilder.advanced.payment.enablepay: 'Enable payment processing at form submission.'
-  ui.medicalformbuilder.advanced.payment.clientcard: 'Take the below amount from clients card'
-  ui.medicalformbuilder.advanced.payment.amount: 'Payment amount'
-  ui.medicalformbuilder.advanced.payment.info: 'Please complete a payment to secure your consultation'
-  ui.medicalformbuilder.advanced.payment.cardnumber: 'Card number'
-  ui.medicalformbuilder.advanced.payment.addcard: 'Add Card'
-  ui.medicalformbuilder.advanced.payment.detail: 'Your details are securely stored with our payment processing partner using bank-grade encryption.'
   ui.medicalformbuilder.form.drugs.placeholder: 'Type a medication you wish to prescribe'
   ui.medicalformbuilder.form.drugs.name: 'Name'
   ui.medicalformbuilder.form.drugs.dosage: 'Dosage'
