--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -3600,6 +3600,8 @@ en:
   ui.clientdetails.membershipnumber: 'Membership number'
   ui.clientdetails.allocated: 'Allocated authorisations'
   ui.clientdetails.details: 'Details'
+  ui.clientdetails.add.address: 'Add Address'
+  ui.clientdetails.edit.address: 'Edit Address'
   ui.clientdetails.customise: 'Customise fields'
   ui.clientdetails.customise.edit: 'Edit all fields'
   ui.clientdetails.customise.dragto: 'Drag to rearrange'
