--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5083,6 +5083,7 @@ en:
   client.appointment.card.pop.cancel.cancel.reson: 'Cancel Reason'
   client.appointment.card.update.note.success.msg: 'The appointment note has been updated and the confirmation email delivered to the recipient'
   client.appointment.card.update.note.error.msg: 'The changes couldn’t be saved. Please try again'
+  client.appointment.card.update.notification.success.msg: 'The changes are saved successfully'
   client.appointment.card.pop.cancel.select.reason: 'Select a reason'
   client.appointment.card.pop.cancel.reason.work: 'Work'
   client.appointment.card.pop.cancel.reason.booking.error: 'Booking Error'
